# VetTrack

./: .cursorrules  .env.example  .env.production  .gitignore  .pr-body-audit-role.md  .pr-body-temp.txt  .pr-phase3.md  .replit  .vettrack-metrics.json  AGENTS.md  App (10).tsx  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE (6).txt  PRODUCTION_READINESS.md  QuickStatusUpdate.tsx  README.md  SKILL.md  SkeletonCard.tsx  SyncIndicator.tsx  accordion (11).tsx  accordion.tsx  activity.tsx  activityFeed.d.ts  activityFeed.ts  activityFeedItem.d.ts  activityFeedItem.ts  add-indexes.ts  admin-users.tsx  alert (13).tsx  alert-dialog (12).tsx  alert.tsx  alerts.tsx  analytics.tsx  analyticsSummary.ts  analyticsSummaryScanActivityItem.ts  analyticsSummaryStatusBreakdown.d.ts  analyticsSummaryStatusBreakdown.d.ts.map  (+133 more)
.agents/: agent_assets_metadata.toml
.github/: .github.workflows.ci.yml
.local/: .commit_message
desktop/cleaner/: README.md  pyproject.toml  vettrack_cleaner.spec
desktop/cleaner/src/vettrack_cleaner/: __init__.py  __main__.py  app.py  paths.py  theme.py  tray.py  workers.py
desktop/cleaner/src/vettrack_cleaner/core/: __init__.py  engine.py  rules_builtin.py  rules_loader.py
desktop/cleaner/src/vettrack_cleaner/i18n/: __init__.py  dict_translator.py
desktop/cleaner/src/vettrack_cleaner/storage/: __init__.py  telemetry.py
desktop/cleaner/src/vettrack_cleaner/windows/: __init__.py  main_window.py
desktop/cleaner/tests/: conftest.py  test_engine.py  test_i18n.py  test_telemetry.py
docs/: .cursorrules  .cursorrules VetTrack  migrations.md  (+10 more)
(+1532 files in other folders)
