[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vettrack-cleaner"
version = "0.1.0"
description = "VetTrack desktop disk cleaner (PyQt6)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6",
  "qt-material>=2.14",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0",
]

[project.scripts]
vettrack-cleaner = "vettrack_cleaner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vettrack_cleaner = ["resources/icons/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
